# nexus-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  run
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml  community-bot.yml  deadman.yml  pages.yml  publish.yml
.grok/: config.example.toml  config.toml
bridge/: README.md  package.json  server.js
bridge/bridges/: cli-bridge.sh  colibri-glm.sh  mock-bridge.sh  ollama-http.sh  ollama_tools.py  stdin_to_grok.py
bridge/dashboard/: index.html
config/: max_models.env
connectors/: README.md
connectors/examples/: claude-desktop.mcp.json  claude-desktop.nexus.json  phone-mcp.env.example  science-mcp.client.json  workspace-mcp.client.json
cookbook/: 01_crash_resume.md  02_judge_vs_presence.md  04_workspace_mcp.md  05_glm52_colibri.md  07_procurement.md  08_arxiv_research.md  09_github_community.md  10_platforms_local_llm.md  11_heartbeat_resilience.md  12_task_operator.md  README.md
data/: routing_table.json  vendor_map.json
docs/: ALIVE.md  ALIVE_IMPROVEMENTS.md  ARCHITECTURE.md  ARXIV_LEDGER.csv  ARXIV_LEDGER.md  BRIDGES_AND_BUS.md  CASCADE.md  CLOSING_THE_GAP.md  COMPARE.md  CONNECTORS.md  DEMO.md  FIGURES.md  GITHUB_COMMUNITY.md  GLM52.md  GROK_BUILD_DEV_PATH.md  GROWTH.md  HOW_LLMS_WRITE_CODE.md  LATEST_ARXIV_IMPROVE.md  LATEST_DUAL_REVIEW.md  LATEST_GITHUB_REVIEW.md  LATEST_IDEA_PORTFOLIO.md  LATEST_IMPLEMENT_SUMMARY.md  LATEST_IMPROVE_PLAN.md  LATEST_META_REVIEW.md  LATEST_X_REVIEW.md  LAUNCH_CHECKLIST.md  LOCAL_LLM_TOOL_CALLING.md  MAX_MODELS.md  MCP_SETUP.md  MEMORY.md  MERGE_REAL_NEXUS.md  META_REVIEW.md  PIPELINE.md  PLATFORMS.md  PYPI.md  REPO_MINE.md  RESILIENCE.md  ROADMAP.md  SCHEDULE_AGENTS.md  SELF_IMPROVE.md  (+11 more)
docs/agents/: PROCUREMENT.md  RESEARCH_ARXIV.md
docs/cookbook/: 01_crash_resume.md  03_local_llm_ollama.md  04_workspace_mcp.md  05_glm52_colibri.md  06_github_do.md  08_arxiv_research.md  09_github_community.md  10_platforms_local_llm.md  11_heartbeat_resilience.md
docs/design/: nexus-orchestration-mcp-server.md
docs/evidence/: README.md  canon-1784257375.json  canon-1784257551.json  canon-1784259317.json  (+5 more)
evals/: scoreboard.py  smoke.py
examples/: approve_task.py  call_bus.py  demo_hitl_resume.py  demo_judge_vs_presence.py  glm52_nexus.md  ollama_local.md  run_demo_task.py  run_with_bus.py
scripts/: alive_both.sh  demo.sh  demo_showcase.sh  full_self_improve_cycle.py  integrate_research.sh  last_real_badge.py  multi_vendor_live.py  run_swe_pro_official_gold.sh  safe_product_eval.sh  swe_pro_e2e.py  swe_pro_full_suite.py  swe_pro_multi_ai.py  track_self_improve.sh
site/: 404.html  index.html  sitemap.xml
skillpacks/: README.md
tests/: test_accept_predicate.py  test_agent_fallback.py  test_agent_mesh.py  test_agent_protocol.py  test_apply_select.py  test_arxiv.py  test_arxiv_ledger.py  test_assetops_planner.py  test_assetops_work_gate.py  test_budget_alloc.py  test_budget_plane.py  test_bus_client.py  test_capability_factory.py  test_cascade.py  test_cedar_policy.py  test_circuits.py  test_claim_verify.py  test_cli_agents.py  test_comm_bench.py  test_consensus.py  test_context_pack.py  test_context_store.py  test_control_plane_planner.py  test_conversation_middleware.py  test_critique_panel.py  test_cross_run_lessons.py  test_engine.py  test_evidence_fts.py  test_experience_bank.py  test_failure_patterns.py  test_forge_board.py  test_github_autonomy.py  test_github_community.py  test_github_job.py  test_grade_artifact.py  test_grade_ledger.py  test_hardware.py  test_harness_state.py  test_heartbeat_recovery.py  test_implement_ledger.py  (+50 more)
(+215 files in other folders)
