[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI name: nexus-core is already taken (unrelated ETL package).
name = "nexus-multi-agent"
version = "0.5.1"
description = "Durable multi-agent engine for real software tasks: resume after crash, rubric judge, GitHub fix jobs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vincent Marquez" }]
keywords = ["multi-agent", "orchestration", "research", "workflow", "memory", "ollama", "agents", "mcp"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "mkdocs-material>=9.0"]

[project.scripts]
nexus = "nexus.cli:main"

[project.urls]
Homepage = "https://vincentmarquez.github.io/nexus-core/"
Documentation = "https://vincentmarquez.github.io/nexus-core/"
Repository = "https://github.com/VincentMarquez/nexus-core"
Issues = "https://github.com/VincentMarquez/nexus-core/issues"
Changelog = "https://github.com/VincentMarquez/nexus-core/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
