[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# PyPI name: nexus-core is already taken (unrelated ETL package).
name = "nexus-multi-agent"
version = "0.9.1"
description = "Durable multi-agent engine: software jobs, arXiv research, procurement intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vincent Marquez" }]
keywords = [
    "multi-agent",
    "orchestration",
    "research",
    "arxiv",
    "procurement",
    "workflow",
    "ollama",
    "agents",
    "mcp",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "mkdocs-material>=9.0"]
charts = ["matplotlib>=3.7"]
procurement = ["matplotlib>=3.7"]
all = ["matplotlib>=3.7", "pytest>=7.0"]

[project.scripts]
nexus = "nexus.cli:main"
nexus-eval = "nexus.grade_cli:main"

[project.urls]
Homepage = "https://vincentmarquez.github.io/nexus-core/"
Documentation = "https://vincentmarquez.github.io/nexus-core/"
Repository = "https://github.com/VincentMarquez/nexus-core"
Issues = "https://github.com/VincentMarquez/nexus-core/issues"
Changelog = "https://github.com/VincentMarquez/nexus-core/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
